kube-manifests/app_deployment_manifests/alb-ingress/com-demo-alb-ingress-80.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: com-demo-alb-ingress
  namespace: argo-demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:577638384428:certificate/3716271e-5f52-4744-adab-e09c7ff39886
spec:
  rules:
  - host: apache.sn.dcli.com
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
  - host: tomcat.sn.dcli.com
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port:
              number: 8080
